test/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-backend-deployment
  namespace: default
  labels:
    app: dissco-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-backend
  template:
    metadata:
      labels:
        app: dissco-backend
        language: java
    spec:
      serviceAccountName: secret-manager
      automountServiceAccountToken: true
      containers:
        - name: dissco-backend
          image: public.ecr.aws/dissco/dissco-core-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          env:
            - name: spring.datasource.url
              value: jdbc:postgresql://terraform-20230822143945532600000001.cbppwfnjypll.eu-west-2.rds.amazonaws.com:5432/dissco
            - name: spring.datasource.username
              valueFrom:
                secretKeyRef:
                  name: db-secrets
                  key: db-username
            - name: spring.datasource.password
              valueFrom:
                secretKeyRef:
                  name: db-secrets
                  key: db-password
            - name: elasticsearch.hostname
              value: elastic-search-es-http.elastic.svc.cluster.local
            - name: elasticsearch.port
              value: "9200"
            - name: elasticsearch.username
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: elastic-username
            - name: elasticsearch.password
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: elastic-password
            - name: springdoc.swagger-ui.path
              value: /docs/swagger-ui.html
            - name: springdoc.api-docs.path
              value: /docs/api-docs
            - name: springdoc.swagger-ui.config-url
              value: /api/docs/api-docs/swagger-config
            - name: springdoc.swagger-ui.url
              value: /api/docs/api-docs
            - name: spring.security.oauth2.resourceserver.jwt.issuer-uri
              value: https://keycloak.iam.naturalis.io/realms/dissco-dev
            - name: spring.security.oauth2.authorizationserver.endpoint.jwk-set-uri
              value: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
            - name: jwt.auth.converter.resource-id
              value: springboot-keycloak-client
            - name: web.annotationEndpoint
              value: http://dissco-core-annotation-processing-service-web.default.svc.cluster.local:8080/annotation
            - name: web.masEndpoint
              value: http://mas-scheduler-web.default.svc.cluster.local:8080/
            - name: web.processorEndpoint
              value: http://dissco-digital-specimen-processor-service.default.svc.cluster.local:8080/
            - name: web.handleEndpoint
              value: https://dev.dissco.tech/handle-manager/api/pids/v1/
            - name: mongo.connection-string
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: mongodb-connection
            - name: mongo.database
              value: dissco
            - name: spring.rabbitmq.password
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: rabbitmq-password
            - name: spring.rabbitmq.username
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: rabbitmq-username
            - name: spring.rabbitmq.host
              value: rabbitmq-cluster.rabbitmq.svc.cluster.local
            - name: application.base-url
              value: https://dev.dissco.tech/api
            - name: spring.security.oauth2.client.registration.dissco.authorization-grant-type
              value: client_credentials
            - name: spring.security.oauth2.client.registration.dissco.client-id
              value: dissco-backend
            - name: spring.security.oauth2.client.registration.dissco.client-secret
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: dissco-backend-client-secret
            - name: spring.security.oauth2.client.provider.dissco.token-uri
              value: https://keycloak.iam.naturalis.io/realms/dissco-dev/protocol/openid-connect/token
            - name: s3.access-key
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: media-derivative-s3-access-key
            - name: s3.access-secret
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: media-derivative-s3-access-key-secret
            - name: s3.bucket-name
              value: dissco-data-media-derivative-test
            - name: spring.profiles.active
              value: media-derivatives,accept-annotations
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "500m"
              ephemeral-storage: "32Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 6
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: db-secrets
              mountPath: "/mnt/secrets-store/db-secrets"
              readOnly: true
            - name: aws-secrets
              mountPath: "/mnt/secrets-store/aws-secrets"
              readOnly: true
      volumes:
        - name: db-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "db-secrets"
        - name: aws-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aws-secrets"
